<resources>
    <string name="app_name">FlyIt</string>


    <!--SignIn Fragment-->
    <string name="sign_in">Sign In</string>
    <string name="sign_in_hint_email">Email</string>
    <string name="sign_in_hint_password">Password</string>
    <string name="sign_in_sign_up_text">No account? Sign up here!</string>

    <!--SignUp Fragment-->
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_hint_email">Email</string>
    <string name="sign_up_hint_name">Name</string>
    <string name="sign_up_hint_password">Password</string>
    <string name="sign_up_hint_repeat_password">Repeat Password</string>
    <string name="sign_up_sign_in_text">Have an account? Sign in here!</string>

    <!--User Fragment-->
    <string name="sign_out">Sign out</string>

    <!--Entertainment Fragment-->
    <string name="learn_a_new_language">Learn a new language</string>
    <string name="trivia_time">Trivia Time!</string>
    <string name="game_view_content_description">Game view></string>
    <string name="destination">Destination</string>
    <string name="departure">Departure</string>

    <!--Trivia Game Fragments-->
    <string name="question_title">This is a placeholder text for the question</string>
    <string name="progress_bar_text">0/15</string>
    <string name="answer_one">Answer one</string>
    <string name="answer_two">Answer two</string>
    <string name="answer_three">Answer three</string>
    <string name="answer_four">Answer four</string>
    <string name="submit_button_text">SUBMIT</string>
    <string name="result_screen_title">Results</string>
    <string name="congrats_text_trivia"> Wow, Congratulations!</string>
    <string name="final_score_trivia">Your score is 3/15</string>
    <string name="trivia_finish_button">FINISH</string>
    <string name="trivia_start_button">START QUIZ</string>

</resources>